--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,10 @@
 	name = crusoexia
 	email = xiawenlan1984@gmail.com
 [alias]
+  conflicts = diff --name-only --diff-filter=U
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	ls = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
+	ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
 	st = status
 	ci = commit
 	co = checkout
