fix coc.nvim auto-completion

--- a/configs/.vim_coc-settings.json
+++ b/configs/.vim_coc-settings.json
@@ -4,5 +4,6 @@
   "eslint.filetypes": [ "javascript", "javascriptreact", "typescript", "typescriptreact" ],
   "typescript.updateImportsOnFileMove.enable": false,
   "javascript.updateImportsOnFileMove.enable": false,
-  "stylelintplus.autoFixOnSave": true
+  "stylelintplus.autoFixOnSave": true,
+  "suggest.noselect": true
 }
