--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -1,25 +1,37 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-# Easy config reload
-bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+
+# *** Plugins ***
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+
+# *** Configuration ***
 
 # vi is good
 setw -g mode-keys vi
-
 # vi mode copy to clipboard
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# Auto restore sessions
+set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-dir '~/.tmux/resurrect'
+
+# Status bar
+set -g window-status-current-style fg=red
 
 # Key bindings
 bind-key C-o rotate-window
 bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
+bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
