tweak tmux config

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -24,7 +24,7 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-dir '~/.tmux/resurrect'
 
 # Status bar
-set -g window-status-current-style fg=red
+set -g window-status-current-style fg=#e73c50
 
 # Key bindings
 bind-key C-o rotate-window
