--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -1,17 +1,12 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-
-# *** Plugins ***
-
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
-
-# *** Configuration ***
 
 # vi is good
 setw -g mode-keys vi
@@ -25,13 +20,13 @@ set -g @resurrect-dir '~/.tmux/resurrect'
 
 # Status bar
 set -g window-status-current-style fg=#e73c50
+set-option -g status-left-length 25
 
 # Key bindings
 bind-key C-o rotate-window
 bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
-
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
