--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -14,7 +14,7 @@ setw -g mode-keys vi
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Auto restore sessions
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-dir '~/.tmux/resurrect'
 
