--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -20,6 +20,7 @@ set -g @resurrect-dir '~/.tmux/resurrect'
 
 # Status bar
 set -g window-status-current-style fg=#e73c50
+set-option -g status-left "[#S] 🚀 "
 set-option -g status-left-length 25
 
 # Key bindings
