--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -13,8 +13,8 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 
 # Status bar
 set -g window-status-current-style fg=#e73c50
-set-option -g status-left "[#S] 🚀 "
-set-option -g status-left-length 25
+set-option -g status-left "[#S] 🚀 \"胜人者有力，自胜者强\" "
+set-option -g status-left-length 50
 
 # Key bindings
 bind-key C-o rotate-window
