iterm2 background image

--- a/configs/com.googlecode.iterm2.plist
+++ b/configs/com.googlecode.iterm2.plist
@@ -47200,7 +47200,7 @@
 			<key>Background Image Is Tiled</key>
 			<false/>
 			<key>Background Image Location</key>
-			<string></string>
+			<string>/Users/cxia/Library/CloudStorage/OneDrive-Personal/图片/wallpaper/coros-training-hub.jpg</string>
 			<key>Badge Color</key>
 			<dict>
 				<key>Alpha Component</key>
