--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -19,5 +19,5 @@
 	proxy = 
 [pull]
 	ff = only
-[url "git@github.com:"]
-  insteadOf = https://github.com/
+;[url "git@github.com:"]
+;  insteadOf = https://github.com/
